examples/test/testpolicy3403.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3403
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key35: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value31
      podSelector:
        matchLabels:
          key34: value44
          key6: value18
          key14: value30
